{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 160,
  "lineage": "611dd351-9bb0-3801-d993-be9dd69a5fa8",
  "resources": [
    {
      "module": "module.BackendServer",
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform-ec2",
      "provider": "module.BackendServer.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0af9569868786b23a",
            "arn": "arn:aws:ec2:ap-south-1:658741521186:instance/i-0c9908d53409bb8b3",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c9908d53409bb8b3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ansible-test",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-079a8781769daf4ef",
            "private_dns": "ip-10-0-1-53.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.53",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c5d7152e30bff290",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-002698f4773e73beb",
            "tags": {
              "Name": "BackendServer-Prod instance"
            },
            "tags_all": {
              "Name": "BackendServer-Prod instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05a8415863a29d97a"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.BackendServer.aws_security_group.sg_example",
            "module.TerraformVPC.aws_subnet.main",
            "module.TerraformVPC.aws_vpc.terraform-created-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0af9569868786b23a",
            "arn": "arn:aws:ec2:ap-south-1:658741521186:instance/i-012e1134beb2a8dd3",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-012e1134beb2a8dd3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ansible-test",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-049a9250907cc3aba",
            "private_dns": "ip-10-0-1-10.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b85821cbb11ca363",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-002698f4773e73beb",
            "tags": {
              "Name": "BackendServer-Prod instance"
            },
            "tags_all": {
              "Name": "BackendServer-Prod instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05a8415863a29d97a"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.BackendServer.aws_security_group.sg_example",
            "module.TerraformVPC.aws_subnet.main",
            "module.TerraformVPC.aws_vpc.terraform-created-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.BackendServer",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_example",
      "provider": "module.BackendServer.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:658741521186:security-group/sg-05a8415863a29d97a",
            "description": "allowing traffic to instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05a8415863a29d97a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Modified_security_config for Backendserver",
            "name_prefix": "",
            "owner_id": "658741521186",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allowing the traffic via terraform config"
            },
            "tags_all": {
              "Name": "Allowing the traffic via terraform config"
            },
            "timeouts": null,
            "vpc_id": "vpc-073eebcda7f3e4df7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.TerraformVPC.aws_subnet.main",
            "module.TerraformVPC.aws_vpc.terraform-created-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.TerraformVPC",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terraform-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:658741521186:internet-gateway/igw-0ba363d2d3bd3e29c",
            "id": "igw-0ba363d2d3bd3e29c",
            "owner_id": "658741521186",
            "tags": {
              "Name": "Terraform gateway"
            },
            "tags_all": {
              "Name": "Terraform gateway"
            },
            "vpc_id": "vpc-073eebcda7f3e4df7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.TerraformVPC.aws_vpc.terraform-created-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.TerraformVPC",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:658741521186:route-table/rtb-098be326b128d7bad",
            "id": "rtb-098be326b128d7bad",
            "owner_id": "658741521186",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ba363d2d3bd3e29c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Terraform route table"
            },
            "tags_all": {
              "Name": "Terraform route table"
            },
            "timeouts": null,
            "vpc_id": "vpc-073eebcda7f3e4df7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.TerraformVPC.aws_internet_gateway.terraform-gateway",
            "module.TerraformVPC.aws_vpc.terraform-created-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.TerraformVPC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02bfad6002cffcf43",
            "route_table_id": "rtb-098be326b128d7bad",
            "subnet_id": "subnet-002698f4773e73beb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.TerraformVPC.aws_internet_gateway.terraform-gateway",
            "module.TerraformVPC.aws_route_table.terraform-route_table",
            "module.TerraformVPC.aws_subnet.main",
            "module.TerraformVPC.aws_vpc.terraform-created-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.TerraformVPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:658741521186:subnet/subnet-002698f4773e73beb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-002698f4773e73beb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "658741521186",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-073eebcda7f3e4df7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.TerraformVPC.aws_vpc.terraform-created-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.TerraformVPC",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform-created-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:658741521186:vpc/vpc-073eebcda7f3e4df7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0359c9b275d00d849",
            "default_route_table_id": "rtb-0dbaa99d5999b1141",
            "default_security_group_id": "sg-0aad18a0763064959",
            "dhcp_options_id": "dopt-0c157eb1f771927b1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-073eebcda7f3e4df7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0dbaa99d5999b1141",
            "owner_id": "658741521186",
            "tags": {
              "Name": "tf-main"
            },
            "tags_all": {
              "Name": "tf-main"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.WebServer",
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform-ec2",
      "provider": "module.WebServer.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0af9569868786b23a",
            "arn": "arn:aws:ec2:ap-south-1:658741521186:instance/i-0a8bcbf78ca6130ed",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a8bcbf78ca6130ed",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ansible-test",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-015ee77113511ce0f",
            "private_dns": "ip-10-0-1-204.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.204",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-00e27bf1b1652398e",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-002698f4773e73beb",
            "tags": {
              "Name": "WebServer-Prod instance"
            },
            "tags_all": {
              "Name": "WebServer-Prod instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-050e86338c9fb835c"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.TerraformVPC.aws_subnet.main",
            "module.TerraformVPC.aws_vpc.terraform-created-vpc",
            "module.WebServer.aws_security_group.sg_example"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0af9569868786b23a",
            "arn": "arn:aws:ec2:ap-south-1:658741521186:instance/i-0e2db97666c0bf544",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e2db97666c0bf544",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ansible-test",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bdd7cc6d559e7ebb",
            "private_dns": "ip-10-0-1-235.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.235",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0395faccfdfc43975",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-002698f4773e73beb",
            "tags": {
              "Name": "WebServer-Prod instance"
            },
            "tags_all": {
              "Name": "WebServer-Prod instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-050e86338c9fb835c"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.TerraformVPC.aws_subnet.main",
            "module.TerraformVPC.aws_vpc.terraform-created-vpc",
            "module.WebServer.aws_security_group.sg_example"
          ]
        }
      ]
    },
    {
      "module": "module.WebServer",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_example",
      "provider": "module.WebServer.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:658741521186:security-group/sg-050e86338c9fb835c",
            "description": "allowing traffic to instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-050e86338c9fb835c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Modified_security_config for Webserver",
            "name_prefix": "",
            "owner_id": "658741521186",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allowing the traffic via terraform config"
            },
            "tags_all": {
              "Name": "Allowing the traffic via terraform config"
            },
            "timeouts": null,
            "vpc_id": "vpc-073eebcda7f3e4df7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.TerraformVPC.aws_subnet.main",
            "module.TerraformVPC.aws_vpc.terraform-created-vpc"
          ]
        }
      ]
    }
  ]
}